# IES-practical

./: .gitignore  README.md  package-lock.json  package.json
Lab01/: README.md
Lab01/lab1_2/my-weather-radar/: pom.xml
Lab01/lab1_5/any-city-forecast/: Dockerfile  pom.xml
Lab01/lab1_5/ipma-api-client/: pom.xml
Lab02/: README.md
Lab02/lab2_1/first-servlet-server/: pom.xml
Lab02/lab2_2/JakartaWebStarter/: compose.yml
Lab02/lab2_3/web-app/: pom.xml
Lab02/lab2_3/web-restful-app/: pom.xml
Lab02/lab2_4/quotes-api/: pom.xml
Lab03/: README.md  compose.yml
Lab03/JPA/: pom.xml
Lab03/lab3_1/: pom.xml
Lab03/lab3_2/: HELP.md  pom.xml
Lab03/lab3_3/: Dockerfile  pom.xml
Lab04/: README.md  compose.yml
Lab04/lab4_1/: react.md
Lab04/lab4_1/my-app/: package-lock.json
Lab04/lab4_1/my-app/src/: App.tsx
Lab04/lab4_2/lab4ex2/: package-lock.json  package.json
Lab04/lab4_2/lab4ex2/src/: App.tsx  index.css
Lab04/lab4_3/: package-lock.json
Lab04/lab4_3/rest-api/: package-lock.json  package.json
Lab04/lab4_3/rest-api/src/: App.tsx
Lab04/lab4_4/api-frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
Lab04/lab4_4/api-frontend/src/: App.css  App.tsx  (+1 more)
Lab05/: .env  README.md  compose.yml
Lab05/lab5_1/: info.md
Lab05/lab5_2/kafka_lab05/: pyproject.toml
Lab05/lab5_2/kafka_lab05/kafka_lab05/: consumer_example.py  producer_example.py
Lab05/lab5_3/: pom.xml
Lab05/lab5_4/kafka_quotes/: Dockerfile  pyproject.toml  wait-for-it.sh  wait_for_kafka.py
Lab05/lab5_4/kafka_quotes/kafka_quotes/: quotes_producer.py
(+124 files in other folders)
